--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 # Site settings
-title: 读立写生
+title: 迷途的羔羊
 header-img: "img/facebook.jpg"
 tagline: "cn"  
-description: "陈素封|读而立·写而生"  
+description: "GODSHARE|坚持.毅力.收获"  
 baseurl: ""
-url: "http://cnfeat"  
+url: "http://xsf1005.github.com"  
 
 # About/contact
 owner: 
-  name: " CnFeat"
-  email: CnFeat@gmail.com
-  bio: "写就是写的报酬"
+  name: " GODSHARE"
+  email: 714437815@qq.com
+  bio: "努力就是前进"
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
 favicon: img/favicon.png
 
-douban_username:  cnfeat
-twitter_username: feat
-github_username: cnfeat
-facebook_username: 
-weibo_username: cnfeat 
-zhihu_username: feat
+#douban_username:  godshare
+#twitter_username: feat
+#github_username: cnfeat
+#facebook_username: 
+#weibo_username: cnfeat 
+#zhihu_username: feat
 
 # Build settings  
 # use Github Flavored Markdown !important  
@@ -44,16 +44,16 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "CnFeat"
+      author: "godshare"
       header-img: "img/facebook.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
   provider : duoshuo
   duoshuo :
-    short_name : cnfeat
+    short_name : godshare
   disqus :
-      short_name : cnfeat
+      short_name : godshare
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: 
