--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 迷途的羔羊
-header-img: "http://xsf1005.github.io/img/favicon.png"
+header-img: "img/favicon.png"
 tagline: "cn"  
 description: "GODSHARE|坚持.毅力.收获"  
 baseurl: ""
@@ -15,13 +15,6 @@ owner:
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
 favicon: img/favicon.png
-
-#douban_username:  godshare
-#twitter_username: feat
-#github_username: cnfeat
-#facebook_username: 
-#weibo_username: cnfeat 
-#zhihu_username: feat
 
 # Build settings  
 # use Github Flavored Markdown !important  
@@ -45,7 +38,7 @@ defaults:
     values:
       layout: "post"
       author: "godshare"
-      header-img: "http://xsf1005.github.io/img/favicon.png" # We don't want posts without a header image, that whould mean white on white
+      header-img: "img/favicon.png" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
