提交新文章

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 迷途的羔羊
-header-img: "img/favicon.png"
+header-img: "img/facebook.jpg"
 tagline: "cn"  
 description: "GODSHARE|坚持.毅力.收获"  
 baseurl: ""
