--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ defaults:
     values:
       layout: "post"
       author: "godshare"
-      header-img: "img/favicon.png" # We don't want posts without a header image, that whould mean white on white
+      header-img: "img/fackbook.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
